pingpong-app-with-solutions/ingress-with-ssl/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-ingress
  namespace: pingpong-a
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - "example.pingpong-a.in"
      - "example.pingpong-b.in"
    secretName: tls-secret
  rules:
  - host: "example.pingpong-a.in"
    http:
      paths:
      - pathType: Prefix
        path: /ping
        backend:
          service:
            name: pingpong-a
            port:
              number: 8080
  - host: "example.pingpong-b.in"
    http:
      paths:
      - pathType: Prefix
        path: /ping
        backend:
          service:
            name: pingpong-b
            port:
              number: 8080
